# basin

./: .gitignore  .testr.conf  README.md  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt
basin/conf/: hiera.yaml  hosts.tpl  puppet.conf
conf/: hiera.yaml
pylib/common/: __init__.py  exception.py  github.py  log.py  utils.py
pylib/framework/: deploy_workflow.py
pylib/framework/lib/: xmt.py
pylib/test/: __init__.py  base.py
pylib/test/files/: bmt.yaml  lsb.yaml  mlb.yaml  pmt.yaml
pylib/test/files/wkf/: mlb.yaml  pmt.yaml
pylib/test/functional/: test_deploy_workflow.py
pylib/test/unit/: test_deploy_workflow.py  test_github.py  test_xmt_manager.py
pylib/vendors/aliyun/ecs/: api.py
sichuan/conf/: hiera.yaml  puppet.conf
sichuan/puppet/manifests/: sites.pp  test.bk.pp  test.pp  test_collectd.pp
sichuan/puppet/modules/gongga/manifests/: config.pp  init.pp  install.pp  package.pp  params.pp  service.pp  users.pp
sichuan/puppet/modules/gongga/templates/: gongga.conf.py.erb
sichuan/puppet/modules/meili/manifests/: config.pp  init.pp  install.pp  package.pp  params.pp  service.pp  users.pp
sichuan/puppet/modules/meili/templates/: meili.conf.py.erb
sichuan/puppet/modules/nginx/: .gitignore  .travis.yml  Gemfile  Modulefile  Puppetfile  README.markdown
sichuan/puppet/modules/nginx/.travis/: Gemfile
sichuan/puppet/modules/nginx/manifests/: config.pp  init.pp  package.pp  params.pp  service.pp
tarim/puppet/manifests/: sites.pp  test.pp
tools/: install_venv.py  install_venv_common.py
(+55 files in other folders)
