[metadata]
name = logstream-ci
version = 0.1.0
summary = LogStream Continuous Integration and Deployment project
description-file = README.md
author = logstream-ci
author-email = logstream-ci@outlook.com
home-page = http://www.logstream.com

[files]
packages =
  Jungar

[nosetests]
verbosity=2
detailed-errors=1

[egg_info]
tag_build = dev
tag_date = false
